Começo do dashboard

--- a/coleta.ipynb
+++ b/coleta.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 211,
+   "execution_count": 15,
    "id": "4df0cc1a-1d38-4f19-bf43-9f7a53724ee6",
    "metadata": {},
    "outputs": [],
@@ -389,7 +389,9 @@
   {
    "cell_type": "markdown",
    "id": "60558095-982f-478e-a653-656ba425fcb6",
-   "metadata": {},
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true
+   },
    "source": [
     "## Juntar os arquivos Semana"
    ]
@@ -2053,7 +2055,9 @@
   {
    "cell_type": "markdown",
    "id": "c46bef2d-23d1-45ef-92bf-72aca99e9710",
-   "metadata": {},
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true
+   },
    "source": [
     "## Juntar os arquivos Regiao"
    ]
@@ -3725,7 +3729,9 @@
   {
    "cell_type": "markdown",
    "id": "4549fdd2-5cc3-4c8d-ae83-d4c6fc51c03c",
-   "metadata": {},
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true
+   },
    "source": [
     "## Apagar todos os arquivos"
    ]
@@ -3887,9 +3893,43 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "9735090d-a086-4a91-966b-5c3ea2e32e4b",
+   "metadata": {},
+   "source": [
+    "## Salvar como Excel"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "id": "0604f9bc-dacd-4f90-a244-f64469d6d3f7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_R = pd.read_csv(\"dados/Marcas_Regiao.csv\")\n",
+    "\n",
+    "# Salvando o DataFrame como um arquivo Excel\n",
+    "df_R.to_excel('dados/Marcas_Regiao.xlsx')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "id": "72bb35b3-14f7-4581-9050-55476240eb5b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_T = pd.read_csv(\"dados/Marcas_Tempo.csv\")\n",
+    "\n",
+    "# Salvando o DataFrame como um arquivo Excel\n",
+    "df_T.to_excel('dados/Marcas_Tempo.xlsx')"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ad66932f-c5a0-4ed1-bd47-7e7f2f81bd8b",
+   "id": "8b09308d-4b7c-457e-9f65-dcbf76af2f38",
    "metadata": {},
    "outputs": [],
    "source": []
